--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="images/josh.jpg" alt="klarity profile picture" width="600" height="336.8"></td>
+            <td> <img src="images/josh.JPG" alt="klarity profile picture" width="600" height="336.8"></td>
             <td>
                 <h1>Nosakhare Joshua</h1>
                 <p><em>Founder and Ceo of <strong><a href="https://magic.ly/Klarity_Co">Klarity Co.</a></strong></em></p>
