--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </td>
 
             <td>Web Developement ⭐⭐☆☆☆
-                <br>Electricals Repairs ⭐⭐⭐⭐⭐
+                <br>Electricals Wiring ⭐⭐⭐⭐⭐
             </td>
 
         </tr>
